<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		<ImageView
			android:id="@+id/logo"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:contentDescription="@string/logo"
			android:src="@drawable/logo_icon" />
		<EditText
			android:id="@+id/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/logo"
			android:layout_centerHorizontal="true"
			android:ems="10"
			android:hint="@string/txtLogin" >
		</EditText>
		<EditText
			android:id="@+id/password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/login"
			android:layout_below="@+id/login"
			android:layout_centerHorizontal="true"
			android:ems="10"
			android:hint="@string/txtPassword"
			android:inputType="textPassword" />
		<Button
			android:id="@+id/btnLogar"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/password"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="18dp"
			android:text="@string/txtBtnLogin" />
		<Button
			android:id="@+id/btnCadastrar"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/btnLogar"
			android:layout_centerHorizontal="true"
			android:text="@string/txtBtnCadastrar" />
	</RelativeLayout>
</ScrollView>